--- a/posts/templates/layout/base_layout.html
+++ b/posts/templates/layout/base_layout.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
           <a class="navbar-brand" href="{% url 'posts:home_page' %}">Blog</a>
@@ -34,8 +35,7 @@
           </div>
         </div>
       </nav>
-    {% block content %}
-    {% endblock content %}
+    {% block content %}{% endblock content %}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
     <script src="{% static 'js/index.js' %}"></script>
