--- a/posts/templates/home/landing_page.html
+++ b/posts/templates/home/landing_page.html
@@ -1,19 +1,51 @@
 {% extends 'layout/base_layout.html' %}
 
 {% block links %}
-    <style>
-        p{
-            color: blue;
-        }
-    </style>
-{% endblock  %}
+<style>
+    p {
+        color: blue;
+    }
 
-{% block  content %}
-    <h1>My First Heading Home</h1>
-    <a href="{% url 'posts:home_page' %}">Home</a>
-    {% for i in data %}
-        <p>My first paragraph. {{ i }}</p>
-    {% endfor %}
+    .image_wrapper {
+        width: 100%;
+        height: 400px;
+        overflow: hidden;
+    }
+
+    .image_wrapper img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+</style>
+{% endblock %}
+
+{% block content %}
+<div class="container py-5">
+    <div class="row m-0">
+        {% for post in posts %}
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title ">{{ post.title }}</h4>
+                    <small class="mt-3 text-muted">{{post.subject}}</small>
+                </div>
+                <div class="card-body">
+                    <div class="image_wrapper">
+                        <img src="{{post.main_image.url}}" alt="{{ post.title }}">
+                    </div>
+                    <div class="description_wrapper pt-3">
+                        <p class="description text-black">{{ post.description }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
+
 {% endblock content %}
 
 
