--- a/posts/templates/posts/edit_post.html
+++ b/posts/templates/posts/edit_post.html
@@ -11,17 +11,17 @@
 {% endblock %}
 {% block content %}
 <div class="container py-4">
-    <form action="{% url 'posts:submit_post' %}" enctype="multipart/form-data" method="post">
+    <form action="{% url 'posts:submit_edit_post' post.id %}" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <div class="row">
             <div class="col-sm-12 mb-5">
-                <h3 class="font-weight-bold">Add Post</h3>
+                <h3 class="font-weight-bold">Edit Post: {{ post.title }}</h3>
                 <small class="mt-3 text-muted">Fill all Fields In the Form</small>
             </div>
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input value="{{ request.POST.title }}" type="text" name="title" class="form-control" id="title" aria-describedby="titleHelp">
+                    <input value="{{ post.title }}" type="text" name="title" class="form-control" id="title" aria-describedby="titleHelp">
                     <div class="invalid-feedback d-block">
                         {{ form.title.errors }}
                     </div>
@@ -30,7 +30,7 @@
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label for="subject" class="form-label">Subject</label>
-                    <input  value="{{ request.POST.subject }}" type="text" name="subject" class="form-control" id="subject" aria-describedby="subjectHelp">
+                    <input  value="{{ post.subject }}" type="text" name="subject" class="form-control" id="subject" aria-describedby="subjectHelp">
                     <div class="invalid-feedback d-block">
                         {{ form.subject.errors }}
                     </div>
@@ -38,8 +38,8 @@
             </div>
             <div class="col-sm-12">
                 <div class="mb-3">
-                    <label for="main_iamge" class="form-label">Add Post Image</label>
-                    <input  value="{{ request.POST.main_image }}" name="main_image" class="form-control" type="file" id="main_iamge">
+                    <label for="main_iamge" class="form-label">Add Post Image {{ post.main_image }}</label>
+                    <input  value="{{ post.main_image }}" name="main_image" class="form-control" type="file" id="main_iamge">
                     <div class="invalid-feedback d-block">
                         {{form.main_image.errors}}
                     </div>
@@ -48,9 +48,7 @@
             <div class="col-sm-12">
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea name="description" class="form-control" id="description" rows="13" >
-                         {{ request.POST.description }}
-                    </textarea>
+                    <textarea name="description" class="form-control" id="description" rows="13" >{{ post.description }} </textarea>
                     <div class="invalid-feedback d-block">
                         {{form.description.errors}}
                     </div>
