--- a/posts/templates/posts/single_post.html
+++ b/posts/templates/posts/single_post.html
@@ -21,8 +21,16 @@
 <div class="container py-4">
     <div class="row">
         <div class="col-sm-12">
-            <div class="image_wrapper">
-                <img src="{{post.main_image.url}}" alt="{{post.title}}">
+            <div class="image_wrapper position-relative">
+                <img src="{{post.get_image }}" alt="{{post.title}}">
+                <div class="post_menu position-absolute" style="bottom:10px; right:10px; z-index:40">
+                    <a href="{% url 'posts:edit_post' post.id %}"  class="btn btn-warning">
+                        <i class="fas fa-pencil"></i> Edit
+                    </a>
+                    <a href="{% url 'posts:delete_post' post.id %}"  class="btn btn-danger">
+                        <i class="fas fa-trash"></i> Delete
+                    </a>
+                </div>
             </div>
         </div>
         <div class="col-sm-12 py-3">
