--- a/posts/templates/layout/base_layout.html
+++ b/posts/templates/layout/base_layout.html
@@ -40,9 +40,18 @@
               </li>
             </ul>
             <ul class="navbar-nav" style="margin-left: auto !important;">
-              <li class="nav-item">
-                <a href="{% url 'posts:create_post' %}" class="btn btn-success btn-sm">  <i class="fa-solid fa-plus"></i> Add Post</a>
-              </li>
+              {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                  <a href="{% url 'posts:create_post' %}" class="btn btn-success btn-sm">  <i class="fa-solid fa-plus"></i> Add Post</a>
+                </li>
+              {% else %}
+                <li class="nav-item ">
+                  <a href="{% url 'posts:login_page' %}" class="btn btn-success btn-sm mr-3">  <i class="fa-solid fa-user"></i> Login</a>
+                </li>
+                <li class="nav-item">
+                  <a href="{% url 'posts:register_page' %}" class="btn btn-success btn-sm ">  <i class="fa-solid fa-user"></i> Register</a>
+                </li>
+              {% endif %}
             </ul>
 
           </div>
