--- a/posts/templates/auth/login.html
+++ b/posts/templates/auth/login.html
@@ -13,13 +13,14 @@
 <div class="container py-4">
     <div class="row m-0">
         <div class="col-lg-6 col-md-12 mx-auto">
-            <form action="{% url 'posts:login_user' %}" enctype="multipart/form-data" method="post">
+            <form action="{% url 'posts:login_user' %}?next={{request.GET.next}}" enctype="multipart/form-data" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-sm-12 mb-5">
                             <h3 class="font-weight-bold">Login To Your Account</h3>
                             <small class="mt-3 text-muted">Fill all Fields In the Form</small>
                         </div>
+                        <input type="hidden" value="{{request.GET.next}}" name="has_next">
                         <div class="col-sm-12">
                             <div class="mb-3">
                                 <label for="usernmae" class="form-label">Username</label>
