--- a/posts/templates/home/landing_page.html
+++ b/posts/templates/home/landing_page.html
@@ -33,6 +33,10 @@
                             <h4 class="card-title ">{{ post.title }}</h4>
                         </a>
                         <small class="mt-3 text-muted">{{post.subject}}</small>
+                        <br>
+                        <div class="badge bg-success w-auto">
+                            {{post.category.name|title }}
+                        </div>
                     </div>
                     <div class="card-body">
                         <div class="image_wrapper">
@@ -42,6 +46,9 @@
                         </div>
                         <div class="description_wrapper pt-3">
                             <p class="description text-black">{{ post.description|truncatechars:150 }}</p>
+                        </div>
+                        <div class="pt-3">
+                            <small class="text-muted">Created By {{post.author.first_name}}</small>
                         </div>
                     </div>
                 </div>
