--- a/posts/templates/posts/add_post.html
+++ b/posts/templates/posts/add_post.html
@@ -36,6 +36,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6">
+                <div class="mb-3">
+                    <select class="form-select" name="category" aria-label="Default select example">
+                        <option selected disabled>Choose Category</option>
+                        {% for category in categories %}
+                        <option value="{{ category.id }}">{{ category.name }} </option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
             <div class="col-sm-12">
                 <div class="mb-3">
                     <label for="main_iamge" class="form-label">Add Post Image</label>
